<?xml version="1.0"?>
<package format="2">
  <name>sort-cpp</name>
  <version>1.0.0</version>
  <description>ROS package for Sort-cpp</description>

  <author email="adi.vardi@enway.ai">Adi Vardi</author>
  <maintainer email="adi.vardi@enway.ai">Adi Vardi</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>
  <!-- <depend>libpcl-all-dev</depend> -->
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>
  <!-- <depend>cv_bridge</depend> -->

</package>
